terraform_project2/vpc.tf
#VPC
resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16" # ranges from `10.0.0.0` to `10.0.255.255`

    enable_dns_hostnames = true
    enable_dns_support = true

    tags = {
        Name = "main_vpc"
    }
}

# Public Subnet
resource "aws_subnet" "public" { #subnet_id = aws_subnet.public.id
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = true
    tags = {
        Name = "public_subnet"
    }
}

# Subnet for RDS (private) in Availability Zone 1
# Private Subnet for RDS
resource "aws_subnet" "private_a" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.2.0/24"
    availability_zone = "eu-central-1a"
    tags = {
        Name = "private_subnet_a"
    }
}

# Subnet for RDS (private) in Availability Zone 2
# Private Subnet for RDS
resource "aws_subnet" "private_b" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.3.0/24"
    availability_zone = "eu-central-1b"
    tags = {
        Name = "private_subnet_b"
    }
}

# Internet Gateway
resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id
    tags = {
        Name = "main_igw"
    }
}

# Route Table for Public Subnet
resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }
    tags = {
        Name = "main_igw"
    }
}

resource "aws_route_table_association" "public_association" {
    subnet_id = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
}
